Update and rename bukuBesar.php to bukuBesar.html

--- a/manager/bukuBesar.html
+++ b/manager/bukuBesar.html
@@ -2,7 +2,7 @@
 
     @session_start();
 
-    include "../koneksi.php";
+    include "../koneksi.html";
 
     if (@$_SESSION['manager']) {     
  ?>
