--- a/jurnalpenggajian.html
+++ b/jurnalpenggajian.html
@@ -2,7 +2,7 @@
 
 @session_start();
 
-include "koneksi.php";
+include "koneksi.html";
 
 if (@$_SESSION['admin'] || @$_SESSION['accounting']) {
 ?>
@@ -153,6 +153,6 @@ if (@$_SESSION['admin'] || @$_SESSION['accounting']) {
     </html>
 <?php
 } else {
-    header("location:index.php");
+    header("location:index.html");
 }
 ?>
