--- a/jurnalpenggajian.html
+++ b/jurnalpenggajian.html
@@ -41,27 +41,27 @@ if (@$_SESSION['admin'] || @$_SESSION['accounting']) {
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="home.php">Halaman Utama</a>
+                            <a class="nav-link" aria-current="page" href="home.html">Halaman Utama</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#Tentang">Tentang</a>
+                            <a class="nav-link" aria-current="page" href="home.html">Tentang</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Jurnal
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdownMenuLink" role="menu">
-                                <li><a class="dropdown-item" href="jurnalPembelian.php">Jurnal Pembelian</a></li>
-                                <li><a class="dropdown-item" href="jurnalPenjualan.php">Jurnal Penjualan</a></li>
-                                <li><a class="dropdown-item" href="jurnalkas.php">Jurnal Penerimaan Kas</a></li>
-                                <li><a class="dropdown-item" href="jurnalpengeluaran.php">Jurnal Pengeluaran Kas</a></li>
+                                <li><a class="dropdown-item" href="jurnalPembelian.html">Jurnal Pembelian</a></li>
+                                <li><a class="dropdown-item" href="jurnalPenjualan.html">Jurnal Penjualan</a></li>
+                                <li><a class="dropdown-item" href="jurnalkas.html">Jurnal Penerimaan Kas</a></li>
+                                <li><a class="dropdown-item" href="jurnalpengeluaran.html">Jurnal Pengeluaran Kas</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a href="jurnalumum.php" class="nav-link">Jurnal Umum </a>
+                            <a href="jurnalumum.html" class="nav-link">Jurnal Umum </a>
                         </li>
                         <li class="nav-item">
-                            <a href="bukubesar.php" class="nav-link">Buku Besar </a>
+                            <a href="bukubesar.html" class="nav-link">Buku Besar </a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">
