--- a/jurnalkas.html
+++ b/jurnalkas.html
@@ -35,7 +35,7 @@ if (@$_SESSION['admin'] || @$_SESSION['accounting']) {
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow navbar-opacity-25" id="mainNav">
             <div class="container">
                 <a class="navbar-brand fw-bold" href="#page-top">APLIKASI AKUNTANSI SEDERHANA</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" href="home.php">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" href="home.html">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
