--- a/jurnalkas.html
+++ b/jurnalkas.html
@@ -80,7 +80,7 @@ if (@$_SESSION['admin'] || @$_SESSION['accounting']) {
             <div class="row align-items-start">
                 <div class="col-md-6">
                     <div class="form-group">
-                    <form action="proses.php" method="POST" accept-charset="utf-8">
+                    <form action="proses.html" method="POST" accept-charset="utf-8">
                         <label for="dtp_input2" class="control-label">Tanggal Penerimaan</label>
                         <div class="input-group date form_date" data-date="" data-date-format="dd MM yyyy" data-link-field="dtp_input2" data-link-format="yyyy-mm-dd">
                             <input class="form-control" name="tanggal" type="text" value="" readonly>
