--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ if (@$_SESSION['accounting'] || @$_SESSION['admin']) {
 
 											<div class="space-6"></div>
 
-											<form name="form" id="loginF" method="post" action="login.php" class="form-horizontal">
+											<form name="form" id="loginF" method="post" action="login.html" class="form-horizontal">
 												<fieldset>
 													<div class="form-group">
 														<label class="block clearfix">
